--- a/Step1_Data_Access.ipynb
+++ b/Step1_Data_Access.ipynb
@@ -205,7 +205,8 @@
    "source": [
     "#### Next, access the NEMO-MEDUSA Seafloor Particular Organic Carbon Flux model output from [Zenodo](https://zenodo.org/record/6513616).\n",
     "- Download the file named MEDUSA_ORCA0083_REGRID_2006-2015_flux.nc <br>\n",
-    "- There are a few steps that need to be taken to be able to work with this netCDF file for our analyses:"
+    "- There are a few steps that need to be taken to be able to work with this netCDF file for our analyses:\n",
+    "1. Use the **Make Multidimensional Raster Layer** tool "
    ]
   }
  ],
