nemo-medusa update

--- a/Step1_Data_Access.ipynb
+++ b/Step1_Data_Access.ipynb
@@ -208,6 +208,20 @@
     "- There are a few steps that need to be taken to be able to work with this netCDF file for our analyses:\n",
     "1. Use the **Make Multidimensional Raster Layer** tool "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6619314",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "## still to add full modelbuilder workflow here"
+   ]
   }
  ],
  "metadata": {
