added box plots

--- a/Step2_Run_Clustering.ipynb
+++ b/Step2_Run_Clustering.ipynb
@@ -140,6 +140,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1bef6ecf",
+   "metadata": {},
+   "source": [
+    "You can also visualize the distribution of a particular variable as a function of cluster ID. From the content pane, right click on the clustering output layer, then select \"Create Chart\" and select \"Box Plot\". Under \"Numerical Fields\", add the variable that you want to plot, and under \"Category\", select \"Cluster ID\". Here is an example below showing the distribution of temperature values for the different clustering groups. There are many other chart types that can be generated (e.g., scatter plots)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64ff45d",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/temp_boxplot.png\" style=\"width:700px; height:auto;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "824f3150-2385-494f-8fc8-ad019ef9b1df",
    "metadata": {},
    "source": [
