updated clustering steps

--- a/Step2_Run_Clustering.ipynb
+++ b/Step2_Run_Clustering.ipynb
@@ -5,61 +5,88 @@
    "id": "4401783c-7943-4038-9394-73f77c734bf9",
    "metadata": {},
    "source": [
-    "## Creating Feature Class & Running Multivariate Clustering"
+    "## Aggregating Data & Running Multivariate Clustering\n",
+    "This notebook is a walk-through of the following steps:\n",
+    "- Aggregating data using two different approaches: (1) generating hexagonal bins, (2) using aggregated point-level data\n",
+    "- Running the multivariate clustering using the k-medoids method\n",
+    "- Visualizing the clustering output onto a map\n",
+    "- Interpreting the clustering "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc02e0c4-a066-4721-801d-9b65708b53c5",
+   "id": "a9ec6ff8",
    "metadata": {},
    "source": [
-    "This notebook is a walk-through of the following steps: \n",
-    "- Resample bathymetry layer\n",
-    "- Convert one of the BTM outputs raster to points\n",
-    "- Create feature class containing all layers \n",
-    "- Aggregate points to hexagons for better visualization\n",
-    "- Run Multivariate Clustering "
+    "#### There are several ways to aggregate data before running the multivariate clustering\n",
+    "1. One option is to generate hexagonal bins of a set size, aggregate values for each parameter to get a single value within each bin, and then run the clustering (left image below)\n",
+    "2. Another option is to generate a feature class of point data, run the clustering, then convert the point feature class to a new raster (right image below)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "440651bb-ff0a-4de7-9c1c-60710c0f13ca",
+   "id": "428f48da",
    "metadata": {},
    "source": [
-    "### <u>Aggregate bathymetry data to coarser resolution<u>\n",
-    "\n",
-    "The GEBCO bathymetry data is at ~450m resolution, while the Bio-ORACLE and POC flux layers are much coarser (1/12-degree resolution or ~9km). To have grid cells of adequate size for all layers, we will down-sample one of the bathymetry layers (in this case to 5km resolution) using the **Aggregate** Spatial Analyst tool. Use the following settings: Cell factor = 11, Aggregation technique = Mean. Note that any of the bathymetry layers can be used here (bathymetry, BBPI, FBPI, or slope). <br>"
+    "#### First Option: Aggregate data using hexagonal bins"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c09ece7-ee89-4785-bf0b-ea4ebba84aef",
+   "id": "3aa51317",
    "metadata": {},
    "source": [
-    "### <u>Convert Raster to Points, create bins, and create Feature Class<u>"
+    "1. Convert one of the raster layers to points using the **Raster to Point** tool. This step will generate a new [feature class](https://pro.arcgis.com/en/pro-app/latest/help/data/feature-classes/feature-classes.htm)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b4d17e7d-8dba-4d79-aab7-13b55878415e",
+   "id": "83e458da",
    "metadata": {},
    "source": [
-    "1. Convert the same raster that the previous step was run on to points using the **Raster to Point** tool. <br>\n",
-    "After this step is done, you can right click on the layer in the contents pane and select \"Attribute Table\" to look at the contents of the table. <br>\n",
-    "The next step is to add all other layers (BTM outputs and environmental layers) to the same Feature Class. "
+    "2. Add other layers (BTM output and environmental layers) to the feature class using the **Extract Multi Values to Points** tool. After this step, you should have an attribute table for this layer containing all of the variables. Note that in this case, the temperature, salinity, and POC flux all have redundant values. This is because the bathymetry layers are higher resolution than the environmental layers.<br><br>\n",
+    "<img src=\"images/rastertopoint_table.png\" style=\"width:600px; height:auto;\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53d78a90-008e-4b73-95db-dd3810fe11a4",
+   "id": "bdc14b12",
    "metadata": {},
    "source": [
-    "2. Optional: convert points to hexagons using the **Aggregate Points** tool"
+    "3. Use the **Summarize Within** GeoAnalytics Desktop Tool to generate hexagonal bins of the data. <br>\n",
+    "First, set the Summarized Layer as the feature class generated in the previous steps, select a \"Bin\" under \"Polygon or Bin\", and \"Hexagon\" as the Bin Type. From there, you can specify the size of the bin that you want. <br>\n",
+    "BBPI and FBPI values are categorical, so it doesn't make sense to calculate a mean of all BBPI/FBPI values in a 5km bin. Instead, we can allocate \"Any\" BBPI/FBPI value within the bin, which will randomly select a value and assign it to a particular bin.<br>\n",
+    "Once you're run this step, you will get an output feature class containing all of the binned data. You can visualize any of these fields by right-clicking on the layer in the Contents Pane and selecting \"Symbology\". <br>\n",
+    "<img src=\"images/sal_bin.png\" style=\"width:600px; height:auto;\" /> <img src=\"images/sal_bin_legend.png\" style=\"width:150px; height:auto;\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c4a8338-d06b-4aaa-b19c-9184dce36a0c",
+   "id": "29af85dd",
+   "metadata": {},
+   "source": [
+    "#### Second Option: Aggregate raster and convert to points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e887b2d3",
+   "metadata": {},
+   "source": [
+    "1. **Change raster resolution**: The GEBCO bathymetry data is at ~450m resolution, while the Bio-ORACLE and POC flux layers are much coarser (1/12-degree resolution or ~9km). To have grid cells of adequate size for all layers, we will down-sample one of the bathymetry layers (in this case to 5km resolution) using the **Aggregate** Spatial Analyst tool, using a cell factor of 11. Any of the bathymetry layers can be used here (bathymetry, BBPI, FBPI, or slope). <br>**Note**: If either the BBPI or FBPI layers are used in this step, it is important to use the median aggregation technique (and not the mean) since the BBPI/FBPI values are categorical. If the slope layer is used, the mean slope value can be used.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8cda641",
+   "metadata": {},
+   "source": [
+    "2. Convert the aggregated raster from the previous step to points using the **Raster to Points** tool. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d3d05a",
    "metadata": {},
    "source": [
     "3. Use the **Extract Multi Values to Points** tool to add other layers to the feature class generated in the previous steps. Select the input rasters to include in the feature class: all BTM output layers, Bio-ORACLE layers, and benthic POC flux model layer."
@@ -67,40 +94,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b03688e-8bab-4fd6-a8ea-25734175debb",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<img src=\"images/table.png\" style=\"width:600px; height:auto;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dfd0e41e-7a7e-465e-838d-8b99548eae19",
+   "id": "86c31d06",
    "metadata": {},
    "source": [
-    "### <u>Run Clustering Analysis<u>"
+    "#### Running the Multivariate Clustering "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a7e29738-e4d4-4796-be40-1df83ea0c856",
+   "id": "769cf5a9",
    "metadata": {},
    "source": [
     "Use the **[Multivariate Clustering](https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-statistics/multivariate-clustering.htm)** Spatial Statistics tool by doing the following:\n",
-    "- Input Features: select the feature class generated in the previous step\n",
+    "- Input Features: select the feature class generated in the previous steps (either the hex-binned feature class, or the aggregated point feature class) \n",
     "- Select the Analysis Fields to be used in the clustering (temperature, salinity, poc flux, bbpi, fbpi, slope). \n",
     "- Select the k-medoids clustering method, and the \"optimized seed locatios\" as the initialization method\n",
-    "- Enter a name/path for an output table for evaluating the number of clusters"
+    "- Enter a name/path for an output table for evaluating the number of clusters <br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0cd0ce34-88da-4c83-bc96-3ff4dbc59889",
-   "metadata": {
-    "tags": []
-   },
+   "id": "99691a44",
+   "metadata": {},
    "source": [
     "<img src=\"images/clustering_settings.png\" style=\"width:400px; height:auto;\" />"
    ]
@@ -123,11 +138,76 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85bafe33",
+   "metadata": {},
+   "source": [
+    "#### Visualizing clustering output on a map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b5cd470",
+   "metadata": {},
+   "source": [
+    "Using hex-bins, the clustering output can be visualized directly onto a map:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "446770df",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/clustering_bins.png\" style=\"width:700px; height:auto;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b19f5b94",
+   "metadata": {},
+   "source": [
+    "Using the point feature class output, the layer can be converted to a raster by using the **Point to Raster** tool. The raster can then be visualized onto a map: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eaa3b00",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/clustering_raster.png\" style=\"width:400px; height:auto;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bbb56de",
+   "metadata": {},
+   "source": [
+    "#### Interpreting clustering outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af5987be",
+   "metadata": {},
+   "source": [
+    "As a first step, we can look at the distribution of cell counts corresponding to the different cluster IDs. This figure is automatically generated during the multivariate clustering step and can be found in the Contents Pane. In this example, (which is the output from the point feature class clustering), we can see that the cluster ID #1 is has the highest number of point counts associated with it. As we can see from the map view of the output, this corresponds to offshore water which likely has a relatively flat terrain. Meanwhile, there are very few points associated with Cluster ID #7, potentially meaning that this Cluster ID is associated with a rare habitat type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22604fd2",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/counts.png\" style=\"width:700px; height:auto;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36bca6d3-9745-4587-8b79-2bb35c764665",
    "metadata": {},
    "source": [
-    "Once the clustering is done running using your specified number of clusters, box-plots will be generated to visualize how different clustering groups correspond to the various input layers. Select Mulivariate Clustering Box-Plots in the content pane to interact with those figures. <br>\n",
-    "As an example, values corresponding to the cluster \"7\" (yellow line in the plot below) tends to be productive (high POC flux), low salinity, and higher temperature. "
+    "We can also use box-plots to show the distribution of different variables' standardized values (z-scores) split by Cluster ID. This figure is automatically generated during the multivariate clustering step and can be found in the Contents Pane. \n",
+    "- On the left panel below: values corresponding to the cluster \"4\" (dark green) tends to be productive (high POC flux), low salinity, and higher temperature. Looking back at the raster map of the cluster IDs, those cells tend to be coastal, as expected. \n",
+    "- On the right panel below: values corresponding to the cluster \"2\" (dark blue) tends to have a higher fine scale BPI value and a higher slope, meaning these cells are likely associated with steep, small-scale benthic features."
    ]
   },
   {
@@ -135,7 +215,7 @@
    "id": "9f32deaf-20d6-4f01-9f56-318730d18400",
    "metadata": {},
    "source": [
-    "<img src=\"images/boxplot.png\" style=\"width:700px; height:auto;\" />"
+    "<img src=\"images/boxplot1.png\" style=\"width:700px; height:auto;\" /> <img src=\"images/boxplot2.png\" style=\"width:685px; height:auto;\" />"
    ]
   },
   {
@@ -143,7 +223,7 @@
    "id": "1bef6ecf",
    "metadata": {},
    "source": [
-    "You can also visualize the distribution of a particular variable as a function of cluster ID. From the content pane, right click on the clustering output layer, then select \"Create Chart\" and select \"Box Plot\". Under \"Numerical Fields\", add the variable that you want to plot, and under \"Category\", select \"Cluster ID\". Here is an example below showing the distribution of temperature values for the different clustering groups. There are many other chart types that can be generated (e.g., scatter plots)"
+    "You can also visualize the distribution of a particular variable as a function of cluster ID. From the content pane, right click on the clustering output layer, then select \"Create Chart\" and select \"Box Plot\". Under \"Numerical Fields\", add the variable that you want to plot, and under \"Category\", select \"Cluster ID\". Below are examples of those plots for temperature and salinity."
    ]
   },
   {
@@ -151,57 +231,48 @@
    "id": "d64ff45d",
    "metadata": {},
    "source": [
-    "<img src=\"images/temp_boxplot.png\" style=\"width:700px; height:auto;\" />"
+    "<img src=\"images/temp_boxplot_2.png\" style=\"width:700px; height:auto;\" /> <img src=\"images/sal_boxplot.png\" style=\"width:700px; height:auto;\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "824f3150-2385-494f-8fc8-ad019ef9b1df",
+   "id": "33732679",
    "metadata": {},
    "source": [
-    "## <u>Visualizing outputs<u>"
+    "Another useful tool is to generate a scatter plot between two variables, split by Cluster ID (see example below). For more exploratory analysis, a scatter plot matrix can also be generated."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b82199db-50f5-4248-87c6-56fff5239627",
+   "id": "fbc99f68",
    "metadata": {},
    "source": [
-    "There are several ways to visualize the outputs of the clustering in a map:\n",
-    "- One option is to use the **Point to Raster** tool to generate a raster layer from the point feature class. In this case, each color corresponds to a cluster ID generated during the clustering step."
+    "<img src=\"images/ts_scatter.png\" style=\"width:600px; height:auto;\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6cd32db2-a341-4334-81be-335e93a32d6d",
+   "id": "cc3d9152",
    "metadata": {},
    "source": [
-    "<img src=\"images/output_raster.png\" style=\"width:400px; height:auto;\" />"
+    "#### Optional: integrating other datasets (e.g., shapefiles)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1e6c4b98-d448-489a-a398-7529f70d74f0",
+   "id": "9e7f0b24",
    "metadata": {},
    "source": [
-    "- Using hexagonal bins to visualize the point-level data can also be done using the **Aggregate Points** GeoAnalyst Desktop Tool"
+    "Adding other point feature class data or shapefiles as a layer on a map if very easy. [Here is a link](https://pro.arcgis.com/en/pro-app/latest/help/data/shapefiles/working-with-shapefiles-in-arcgis-pro.htm) with information about adding shapefiles into ArcGIS Pro. <br>For example, below is a shapefile of the Monterey Bay National Marine Sanctuary as a layer on top of the clustering output. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abd7a390-1399-45e0-a1da-22fa7a7e1577",
+   "cell_type": "markdown",
+   "id": "eef91702",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e920274-2898-4c1a-b972-243d1c9877a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"images/mb_shp.png\" style=\"width:600px; height:auto;\" />"
+   ]
   }
  ],
  "metadata": {
