fixed a few typos

--- a/Step2_Run_Clustering.ipynb
+++ b/Step2_Run_Clustering.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "## Aggregating Data & Running Multivariate Clustering\n",
     "This notebook is a walk-through of the following steps:\n",
-    "- Aggregating data using two different approaches: (1) generating hexagonal bins, (2) using aggregated point-level data\n",
+    "- Aggregating data using two different approaches: (1) binning the data into hexagon bins, (2) using aggregated point-level data\n",
     "- Running the multivariate clustering using the k-medoids method\n",
     "- Visualizing the clustering output onto a map\n",
-    "- Interpreting the clustering "
+    "- Interpreting the clustering results"
    ]
   },
   {
@@ -19,8 +19,8 @@
    "metadata": {},
    "source": [
     "#### There are several ways to aggregate data before running the multivariate clustering\n",
-    "1. One option is to generate hexagonal bins of a set size, aggregate values for each parameter to get a single value within each bin, and then run the clustering (left image below)\n",
-    "2. Another option is to generate a feature class of point data, run the clustering, then convert the point feature class to a new raster (right image below)"
+    "1. One option is to aggregate values from each parameter into hexagonal bins of a defined size, and then run the clustering\n",
+    "2. Another option is to down-sample one of the bathymetry layers, generate a feature class of point data with all of the other layers, run the clustering, then convert the point feature class to a new raster"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "83e458da",
    "metadata": {},
    "source": [
-    "2. Add other layers (BTM output and environmental layers) to the feature class using the **Extract Multi Values to Points** tool. After this step, you should have an attribute table for this layer containing all of the variables. Note that in this case, the temperature, salinity, and POC flux all have redundant values. This is because the bathymetry layers are higher resolution than the environmental layers.<br><br>\n",
+    "2. Add other layers (BTM output and environmental layers) to the feature class using the **Extract Multi Values to Points** tool. After this step, you should have an attribute table for this layer containing all of the variables. Note that in this case, the temperature, salinity, and POC flux all have redundant values. This is because the bathymetry layers are higher resolution than the environmental layers (this will not be the case after the next step is run).<br><br>\n",
     "<img src=\"images/rastertopoint_table.png\" style=\"width:600px; height:auto;\" />"
    ]
   },
@@ -54,9 +54,16 @@
    "metadata": {},
    "source": [
     "3. Use the **Summarize Within** GeoAnalytics Desktop Tool to generate hexagonal bins of the data. <br>\n",
-    "First, set the Summarized Layer as the feature class generated in the previous steps, select a \"Bin\" under \"Polygon or Bin\", and \"Hexagon\" as the Bin Type. From there, you can specify the size of the bin that you want. <br>\n",
-    "BBPI and FBPI values are categorical, so it doesn't make sense to calculate a mean of all BBPI/FBPI values in a 5km bin. Instead, we can allocate \"Any\" BBPI/FBPI value within the bin, which will randomly select a value and assign it to a particular bin.<br>\n",
-    "Once you're run this step, you will get an output feature class containing all of the binned data. You can visualize any of these fields by right-clicking on the layer in the Contents Pane and selecting \"Symbology\". <br>\n",
+    "- First, set the Summarized Layer as the feature class generated in the previous steps, select a \"Bin\" under \"Polygon or Bin\", and \"Hexagon\" as the Bin Type. From there, you can specify the size of the bin that you want. <br>\n",
+    "- BBPI and FBPI values are categorical, so it doesn't make sense to calculate a mean of all BBPI/FBPI values in a 5km bin. Instead, we can allocate \"Any\" BBPI/FBPI value within the bin, which will randomly select a value and assign it to a particular bin.<br>\n",
+    "- Once you've run this step, you will get an output feature class containing all of the binned data. You can visualize any of these fields by right-clicking on the layer in the Contents Pane and selecting \"Symbology\". <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4243596",
+   "metadata": {},
+   "source": [
     "<img src=\"images/sal_bin.png\" style=\"width:600px; height:auto;\" /> <img src=\"images/sal_bin_legend.png\" style=\"width:150px; height:auto;\" />"
    ]
   },
@@ -105,7 +112,7 @@
    "id": "769cf5a9",
    "metadata": {},
    "source": [
-    "Use the **[Multivariate Clustering](https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-statistics/multivariate-clustering.htm)** Spatial Statistics tool by doing the following:\n",
+    "Whether you used the first or second option to aggregate your data, the clustering steps are the same. <br>Use the **[Multivariate Clustering](https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-statistics/multivariate-clustering.htm)** Spatial Statistics tool by doing the following:\n",
     "- Input Features: select the feature class generated in the previous steps (either the hex-binned feature class, or the aggregated point feature class) \n",
     "- Select the Analysis Fields to be used in the clustering (temperature, salinity, poc flux, bbpi, fbpi, slope). \n",
     "- Select the k-medoids clustering method, and the \"optimized seed locatios\" as the initialization method\n",
@@ -189,7 +196,7 @@
    "id": "af5987be",
    "metadata": {},
    "source": [
-    "As a first step, we can look at the distribution of cell counts corresponding to the different cluster IDs. This figure is automatically generated during the multivariate clustering step and can be found in the Contents Pane. In this example, (which is the output from the point feature class clustering), we can see that the cluster ID #1 is has the highest number of point counts associated with it. As we can see from the map view of the output, this corresponds to offshore water which likely has a relatively flat terrain. Meanwhile, there are very few points associated with Cluster ID #7, potentially meaning that this Cluster ID is associated with a rare habitat type."
+    "As a first step, we can look at the distribution of cell counts corresponding to the different cluster IDs. This figure is automatically generated during the multivariate clustering step and can be found in the Contents Pane. In this example, (which is the output from the U.S West Coast-wide point feature class clustering), we can see that the cluster ID #1 is has the highest number of point counts associated with it. As we can see from the map view of the output, this corresponds to offshore water which likely has a relatively flat terrain, and cold, high-salinity water. Meanwhile, there are very few points associated with Cluster ID #7, potentially meaning that this Cluster ID is associated with a rare habitat type."
    ]
   },
   {
