updated nemo-medusa poc pre-processing

--- a/Step1_Data_Access.ipynb
+++ b/Step1_Data_Access.ipynb
@@ -187,7 +187,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"images/biooracle1.png\" style=\"height:450px\" /> <img src=\"images/biooracle2.png\" style=\"height:250px\" />"
+    "<img src=\"images/biooracle1.png\" style=\"height:400px\" /> <img src=\"images/biooracle2.png\" style=\"height:200px\" />"
    ]
   },
   {
@@ -205,22 +205,94 @@
    "source": [
     "#### Next, access the NEMO-MEDUSA Seafloor Particular Organic Carbon Flux model output from [Zenodo](https://zenodo.org/record/6513616).\n",
     "- Download the file named MEDUSA_ORCA0083_REGRID_2006-2015_flux.nc <br>\n",
-    "- There are a few steps that need to be taken to be able to work with this netCDF file for our analyses:\n",
-    "1. Use the **Make Multidimensional Raster Layer** tool "
+    "- There are a few steps that need to be taken to be able to work with this netCDF file for our analyses:\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f6619314",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
    "source": [
-    "## still to add full modelbuilder workflow here"
+    "1. Use the **Make Multidimensional Raster Layer** tool, using the netcdf file as the Input Multidimensional Raster, and selecting \"avg_flux\" as the variable to use in the raster layer. The Dimension Information and Extent does not need to be changed. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "341b5777",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/makemultidim.png\" style=\"height:450px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f394954",
+   "metadata": {},
+   "source": [
+    "2. Use the **Copy Raster** tool to make a copy of the mutlidimensional raster and save is as a (Cloud Raster Format (CRF)), selecting the \"Process as Multidimensional\" option."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21f984be",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/copyraster.png\" style=\"height:450px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ed154e9",
+   "metadata": {},
+   "source": [
+    "3. Rescale the resolution of the multidimensional raster by specifying the x and y scale factors using the **Rescale** tool. Set the x and y scale factor to 8.333333333E-02 (1/12 of a degree). Make sure to use the CRF file from the previous step in the rescaling. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01d6ba26",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/rescale.png\" style=\"height:250px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c84eec",
+   "metadata": {},
+   "source": [
+    "4. Use the **Shift** tool to move the x and y values of the raster to new geographic location - this will ensure that this layer can be perfectly overlaid with the other layers.\n",
+    "Set the following shifts:\n",
+    "- Shift x-coordinates by: -180\n",
+    "- Shift y-coordinates by: 2070"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc447231",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/shift.png\" style=\"height:250px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b70eb084",
+   "metadata": {},
+   "source": [
+    "5. Lastly, use the **Define Projection** tool to set the projection to \"GCS_WGS_1984\" to ensure the layer is in the same projection as the other raster layers used in this analysis. Once that step has been run, the avg benthic POC flux model output should be properly projected on a map: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91ccccd1",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/poc_raster.png\" style=\"height:350px\" />"
    ]
   }
  ],
