updated GEBCO data access steps

--- a/Step1_Data_Access.ipynb
+++ b/Step1_Data_Access.ipynb
@@ -32,7 +32,7 @@
    "id": "49601fc0-2559-4183-b5fe-f3e92cee13cb",
    "metadata": {},
    "source": [
-    "#### 1. Download data, generate mosaic, clip to region of interest"
+    "#### 1. Download GEBCO bathymetry data"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "id": "0bddb5f6-1e85-4850-bdd4-76a270254965",
    "metadata": {},
    "source": [
-    "The GEBCO_2023 Grid (sub-ice topo/bathy) can be downloaded at [this link](https://www.gebco.net/data_and_products/gridded_bathymetry_data/) in several formats: NetCDF, EsrI ACRII raster, or GeoTIFF. Download the \"Data GeoTiff\". These data will be downloaded as 8 tiles (each with an area of 90° x 90°)."
+    "The GEBCO_2023 Grid (sub-ice topo/bathy) can be downloaded at [this link](https://www.gebco.net/data_and_products/gridded_bathymetry_data/) in several formats: NetCDF, EsrI ACRII raster, or GeoTIFF. Download the \"netCDF\" file. Note that this file will take several minutes to download."
    ]
   },
   {
@@ -48,68 +48,100 @@
    "id": "f1350232-d71e-40a2-bf67-c30292af988f",
    "metadata": {},
    "source": [
-    "<img src=\"images/gebco_download.png\" style=\"height:250px\" />"
+    "<img src=\"images/gebcodownload.png\" style=\"height:250px\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b013020-6f9d-448a-9fd0-122da4541dec",
+   "id": "77203bfb",
    "metadata": {},
    "source": [
-    "In ArcGIS Pro, use the **Mosaic to New Raster** tool, with the following settings applied: Pixel Type = 16 bit signed, Number of bands = 1, Mosaic Operator = Last."
+    "#### 2. Define your region of interest"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "acdfd666-6f61-431e-985a-cc05ab84bcb4",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<img src=\"images/gebco_mosaic.png\" style=\"height:300px\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2040f3ab-f756-40e0-927c-319cd4eaf7ff",
+   "id": "2400c7ce",
    "metadata": {},
    "source": [
-    "We can now clip the raster to our region of interest by using the **Clip Raster** tool. The input raster is the global mosaic raster, and the extent can manually be changed by updating the coordinates of the rectangle.<br> Leave the NoData Value as blank or use the default value (32767)"
+    "In the **Analysis** tab, select \"Environments\" in the Geoprocessing section. In the \"Processing Extent\", select \"As Specified Below\", and input the coordinates that you are interested in. \n",
+    "- need input from Keith here - how to set Extent and have it saved. I think what I'm doing is right but not sure."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74bf8361-b8d8-499c-9cea-a482dfdec217",
+   "id": "dd1ce128",
    "metadata": {},
    "source": [
-    "<img src=\"images/gebco_clipped.png\" style=\"height:400px\" />"
+    "<img src=\"images/setextent.png\" style=\"height:400px\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b0f03d9-3386-4f88-b374-d5791e3b9874",
+   "id": "89ce6fab",
    "metadata": {},
    "source": [
-    "#### 2. Create a mask of land so only values below sea level are included in the raster."
+    "#### 3. Make Multidimensional Raster Layer"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a55dbf1d-bcd6-42f7-954d-fc0fdec30f58",
+   "id": "3c30d612",
    "metadata": {},
    "source": [
-    "1. Use the **Less Than** Spatial Analyst tool, with the input raster being the clipped bathymetry mosaic generated in the previous step. The constant value 2 should be inputted as \"0\". \n",
-    "2. Next, use the **Set Null** Spatial Analyst tool with the output from the previous step set as the input conditional raster, and the input constant value set as 0. This will set all grids labeled as \"0\" to NaNs.\n",
-    "3. Lastly, use the **Extract by Mask** tool with the clipped bathymetry mosaic as the input raster, and set the feature mask data to the mask output from the previous step. Make sure to set the extraction area as \"outside\". <br>\n",
-    "Now you should have a raster layer with bathymetry values only in the ocean."
+    "Use the **Make Multidimensional Raster Layer** tool, with the netCDF file as your input file. Select the variable that you want to use in your layer (elevation). Since your extent has already been defined, the coordinates of the extent will automatically populate. You shoudl now be able to visualize the GEBCO output for your region of interest."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "59afe183-da40-4e3a-b0dd-76d257f1d4ea",
+   "id": "c9f656b4",
    "metadata": {},
    "source": [
-    "<img src=\"images/gebco_masked.png\" style=\"height:400px\" />"
+    "<img src=\"images/makemulti.png\" style=\"height:300px\" /> <img src=\"images/makemulti_westcoast.png\" style=\"height:300px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e12335a",
+   "metadata": {},
+   "source": [
+    "#### 4. Remove values above sea-level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "210d9797",
+   "metadata": {},
+   "source": [
+    "Use the **Con** Spatial Analyst tool to make a conditional statement on each of the raster grid cells. Set the Input conditional raster as the raster made in the previous step, and set the condition to \"Where Values is less than 0\". <br>\n",
+    "Use the same raster layer as the \"Input true raster\". What this does is it will use grid cells from the GEBCO raster if the grid cell values from the same raster are less than 0. <br> \n",
+    "Save the output raster as a file with a \".crf\" extension. This is a file format that ESRI uses to support multidimensional data. <br>\n",
+    "You should now be able to see a new layer with values only below sea level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b6c46b9",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/con.png\" style=\"height:300px\" /> <img src=\"images/con_westcoast.png\" style=\"height:300px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52c490ba",
+   "metadata": {},
+   "source": [
+    "#### 5. Convert raster to TIFF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdd07187",
+   "metadata": {},
+   "source": [
+    "Next we can convert theh CRF file to TIFF format. This step will ensure that all of the layers we are using are in the same format. \n",
+    "Use the **Copy Raster** tool with the .crf file from the previous step as the input raster, and set the output raster dataset as a file with a \".tif\" extension. Under \"Format\", select \"TIFF Format\". Keep the NoData value as the default value (which should be -32718)"
    ]
   },
   {
@@ -117,7 +149,7 @@
    "id": "b3c2e6dc-1b18-4b13-ac0e-6e8f7c45c20b",
    "metadata": {},
    "source": [
-    "#### 4. Run the Benthic Terrain Modeler"
+    "### <u>Running the Benthic Terrain Modeler<u>"
    ]
   },
   {
