--- a/Step2_Run_Clustering.ipynb
+++ b/Step2_Run_Clustering.ipynb
@@ -28,7 +28,7 @@
    "id": "428f48da",
    "metadata": {},
    "source": [
-    "#### First Option: Aggregate data using hexagonal bins"
+    "### <u>First Option: Aggregate data using hexagonal bins<u>"
    ]
   },
   {
