updated gebco data access steps

--- a/Step1_Data_Access.ipynb
+++ b/Step1_Data_Access.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "This notebook is a walk-through of the following steps:\n",
-    "- Accessing GEBCO bathymetry data, clipping that data to a region of interest, and masking that data to exclude values above sea level.\n",
+    "- Accessing GEBCO bathymetry data for your region of interest, excluding values above sea level, and converting netCDF to TIFF.\n",
     "- Run the Benthic Terrain Modeler\n",
     "- Accessing Bio-ORACLE and NEMO-MEDUSA raster layers"
    ]
