added some optional next steps

--- a/Step2_Run_Clustering.ipynb
+++ b/Step2_Run_Clustering.ipynb
@@ -72,7 +72,7 @@
    "id": "29af85dd",
    "metadata": {},
    "source": [
-    "#### Second Option: Aggregate raster and convert to points"
+    "### <u>Second Option: Aggregate raster and convert to points<u>"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "id": "cc3d9152",
    "metadata": {},
    "source": [
-    "#### Optional: integrating other datasets (e.g., shapefiles)"
+    "### <u>Optional next steps<u>"
    ]
   },
   {
@@ -270,6 +270,8 @@
    "id": "9e7f0b24",
    "metadata": {},
    "source": [
+    "**Integrating other datasets (e.g., shapefiles)**\n",
+    "\n",
     "Adding other point feature class data or shapefiles as a layer on a map if very easy. [Here is a link](https://pro.arcgis.com/en/pro-app/latest/help/data/shapefiles/working-with-shapefiles-in-arcgis-pro.htm) with information about adding shapefiles into ArcGIS Pro. <br>For example, below is a shapefile of the Monterey Bay National Marine Sanctuary as a layer on top of the clustering output. "
    ]
   },
@@ -279,6 +281,17 @@
    "metadata": {},
    "source": [
     "<img src=\"images/mb_shp.png\" style=\"width:600px; height:auto;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca5ec14d",
+   "metadata": {},
+   "source": [
+    "**Building upon this model** <br><br>\n",
+    "There are many ways to build upon this model. Some ideas include:\n",
+    "- Including additional benthic layers. There are a number of global biogeochemical layers available through [Bio-ORACLE](https://www.bio-oracle.org/downloads-to-email.php), the [ArcGIS Living Atlas of the World](https://livingatlas.arcgis.com/en/home/) and other sources. There may also be higher-resolution benthic data from your region of interest that you could incorporate into this model. <br><br>\n",
+    "- Tweaking the clustering methods: some ideas include playing around with the number of clusters, changing the resolution in the aggreagation steps, using different aggregation statistics (mean values vs median values, etc).\n"
    ]
   }
  ],
